fix CYA pages spacing

--- a/assets/scss/local.scss
+++ b/assets/scss/local.scss
@@ -130,3 +130,11 @@ div.moj-action-bar__filter::after { content: none !important; }
     }
   }
 }
+
+.summary-list-wider-key-column {
+  .govuk-summary-list__row {
+    .govuk-summary-list__key {
+      width: 40%;
+    }
+  }
+}
